Xóa các class model cũ của database cũ và thêm các class model mới của database mới ,fix các vấn đề liên quan tới các class trên version2.